--- a/index.html
+++ b/index.html
@@ -83,9 +83,6 @@
           <a data-scroll="" href="#services">
             <span>Сервис</span>
           </a>
-          <a data-scroll="" href="#price">
-            <span>Прайс</span>
-          </a>
           <a data-scroll="" href="#testimonial">
             <span>Отзывы</span>
           </a>
@@ -142,7 +139,7 @@
                 <div class="wrap-about">
                   <div class="w-content">
                     <p class="head-about">
-                      Дизайн — это мощнейший инструмент, связывающий продукт и пользователя. Он должен быть прост и понятен. Для меня важно сделать качественный продукт. 
+                      Дизайн — это мощнейший инструмент, связывающий продукт и пользователя. Он должен быть прост и понятен. Для меня важно сделать качественный продукт.
                     </p>
 
                     <h5 class="name">
@@ -601,7 +598,7 @@
 
       <!--FOOTER-->
       <footer>
-        <div class="footer-top">
+        <div class="footer-top" id="contact">
           <ul class="socials">
             <li class="instagram">
               <a target="_blank" href="https://www.instagram.com/gu_chi_ka/" data-hover="Instagram">Instagram</a>
@@ -612,6 +609,14 @@
             <li class="facebook">
               <a target="_blank" href="https://www.facebook.com/profile.php?id=100012749432566"
                 data-hover="Facebook">Facebook</a>
+            </li>
+            <li class="email">
+              <a target="_blank" href="mailto:chingiz_guseynov@list.ru"
+                data-hover="Email">Email</a>
+            </li>
+            <li class="phone">
+              <a href="tel:+79264230100"
+                data-hover="phone">+7 908 288 07 40</a>
             </li>
           </ul>
         </div>
